deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flyrewheel
  labels:
    app.kubernetes.io/part-of: flyrewheel
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
