deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flyrewheel-worker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flyrewheel-worker
  ports:
    - name: health
      port: 8080
      targetPort: health
